--- a/package.json
+++ b/package.json
@@ -48,13 +48,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "cookies-next": "^6.0.0",
+    "cookies-next": "^4.2.1",
     "date-fns": "2.30.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.519.0",
-    "next": "^15.3.4",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
@@ -66,14 +65,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "web-vitals": "^2.1.4",
     "zod": "^3.24.1",
-    "zustand": "^4.5.7"
+    "zustand": "^4.5.7",
+    "next": "^14.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.16.3",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
